--- a/publications.html
+++ b/publications.html
@@ -73,32 +73,17 @@
  <h1>Publications</h1>
 		<br>
  -->
+ 
+For a full list of publications please see my <a href="https://scholar.google.com/citations?user=MDeIveMAAAAJ&hl=en"> Google Scholar</a> page.  
+ 
+<!-- 
  <h1>Preprints/Recent Publications</h1>
  <ol>
+ -->
 
 
-
-   <li> Jinhyun So, Ramy E. Ali, Basak Guler, A. Salman Avestimehr,<a href="https://arxiv.org/abs/2110.02177"> Secure Aggregation for Buffered Asynchronous Federated Learning</a>, NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership, 2021. </li>       
-  <br />
-
-
-   <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, 2021. </li>       
-  <br />
-
-
-   <li> Basak Guler, Aylin Yener, <a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a>, IEEE International Symposium on Information Theory, 2021. </li>       
-  <br />
-
-   <li> Basak Guler, Aylin Yener, <a href="https://arxiv.org/pdf/2102.11274.pdf">A Framework for Sustainable Federated Learning</a>, International Symposium on Modeling and Optimization in Mobile, Ad hoc, and Wireless Networks (WiOpt), 2021. </li>       
-  <br />
 
    
-   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </li>       
-  <br />
-  
-  
-  <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, 2021. </li>       
-  <br />
  
  </ol>
 
@@ -151,8 +136,33 @@
   <h1>Conference Publications</h1>
           <ol>
 
+
+   <li> Irem Ergun, Hasin Us Sami, Basak Guler, Communication-Efficient Secure Aggregation for Federated Learning, IEEE Global Communications Conference, Globecom'22, Rio de Janeiro, Brazil, Dec. 2022. </li>       
+  <br />
+
+
+   <li> Irem Ergun, Hasin Us Sami, Basak Guler, Privacy-Preserving Federated Learning with Limited Resources, ICLR Workshop on Socially Responsible Machine Learning, ICLR'2022. </li>       
+  <br />
+
+
+   <li> Jinhyun So, Chaoyang He, Chien-Sheng Yang, Songze Li, Qian Yu, Ramy E. Ali, Basak Guler, A. Salman Avestimehr, <a href="https://proceedings.mlsys.org/paper/2022/file/d2ddea18f00665ce8623e36bd4e3c7c5-Paper.pdf">LightSecAgg: a Lightweight and Versatile Design for Secure Aggregation in Federated Learning</a>, MLSys Conference on Machine Learning and Systems, MLSys'2022. </li>       
+  <br />
+  
+
+   <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, FL-AAAI International Workshop on Trustable, Verifiable, and Auditable Federated Learning, in conjunction with AAAI 2022. </li>       
+  <br />
+  
+
+   <li> Hasin Us Sami, Basak Guler, Over-the-air Clustered Federated Learning, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'21. </li>       
+  <br />
+
+
+
+
+
    <li> Jinhyun So, Ramy E. Ali, Basak Guler, A. Salman Avestimehr,<a href="https://arxiv.org/abs/2110.02177"> Secure Aggregation for Buffered Asynchronous Federated Learning</a>, NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership, 2021. </li>       
   <br />
+
 
 
 
@@ -161,6 +171,9 @@
 
    <li> Basak Guler, Aylin Yener, <a href="https://arxiv.org/pdf/2102.05639.pdf">Energy Harvesting Distributed Machine Learning</a>, IEEE International Symposium on Information Theory, 2021. </li>       
   <br />
+
+
+
 
 
   <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://papers.nips.cc/paper/2020/file/5bf8aaef51c6e0d363cbe554acaf3f20-Paper.pdf">A Scalable Approach for Privacy-Preserving Collaborative Machine Learning</a>, Conference on Neural Information Processing Systems (NeurIPS 2020). </li>       
