--- a/teaching.html
+++ b/teaching.html
@@ -76,13 +76,13 @@
 <br />		
 
 
-		<p style="text-align:justify"><font color="black">Winter 2021, 2022:  </font> Information Theory (EE 250)</p>
+		<p style="text-align:justify"><font color="black"> </font> Information Theory (EE 250)</p>
 		
 
 		
 
 		
-		<p style="text-align:justify"><font color="black"> Fall 2020, 2021:  </font> Stochastic Processes (EE 215)</p>
+		<p style="text-align:justify"><font color="black">  </font> Stochastic Processes (EE 215)</p>
 		
 
 	    	
@@ -92,7 +92,7 @@
 <br />		
 
 	
-		<p style="text-align:justify"><font color="black"> Spring 2022:  </font> Digital Signal Processing (EE 141)</p>
+		<p style="text-align:justify"><font color="black">  </font> Digital Signal Processing (EE 141)</p>
 	
 
 		
