--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
-	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received an <a href="https://techpartnerships.ucr.edu/oasis">OASIS Funding Award</a> to support our research. </p>
+	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a UCR OASIS Funding Award to support our research. </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> August 2022: </b></font> Serving as a track-co chair for ML and Optimization for Wireless Systems at <a href="https://wcnc2023.ieee-wcnc.org/">WCNC 2023</a>, submission deadline Sept 12, 2022! </p>
+	<p style="text-align:justify"><font color="purple"><b> August 2022: </b></font> Serving as a track co-chair for ML and Optimization for Wireless Systems at <a href="https://wcnc2023.ieee-wcnc.org/">WCNC 2023</a>, submission deadline Sept 12, 2022! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> August 2022: </b></font> Our paper Communication-Efficient Secure Aggregation for Federated Learning has been accepted to <a href="https://globecom2022.ieee-globecom.org/">Globecom 2022</a>. </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> July 2022: </b></font> Serving as a panelist  at the <a href="https://nasit-2022.seas.ucla.edu/">North American School of Information Theory</a> held between August 15-19 2022 at UCLA. </p>
+	<p style="text-align:justify"><font color="purple"><b> July 2022: </b></font> Serving as a panelist  at the <a href="https://nasit-2022.seas.ucla.edu/">North American School of Information Theory</a>. </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> June 2022: </b></font> Organizing an AI workshop for high school students at UC Riverside in July 2022, in collaboration with the Redlands Unified School District. </p>
