--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on distributed and federated learning, secure, private and trustworthy information processing  in large-scale networks. 
+		<p style="text-align:justify">   My research is on distributed/federated ML, privacy, and security in wireless networks. 
 		</p>
  
 
@@ -91,11 +91,16 @@
 	
 		<p style="text-align:justify"> 
 		
-		<b>Prospective Students:</b> I am always interested in working with highly motivated students who want to pursue research at the intersection of: information theory, distributed/federated machine learning, private/secure computing in wireless networks. Our research typically involves both  theoretical and implementation components, which requires a strong mathematical background. 
+		<b>Prospective Students:</b> I am always interested in working with highly motivated students who want to pursue research at the intersection of: information theory, distributed/federated ML, privacy/security in wireless networks. Our research typically involves both  theoretical and implementation components, which requires a strong mathematical background. 
 		If you are interested in working in our lab, please apply to the PhD programs of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no prior experience in engineering are also encouraged to apply. 
 		</p>
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning has been accepted to <a href="https://arxiv.org/pdf/2106.03328.pdf">AAAI 2023</a>! </p>
+
 
 	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a UCR OASIS Funding Award to support our research. </p>
 
