--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on distributed/federated ML, privacy, and security in wireless networks. 
+		<p style="text-align:justify">   My research is on distributed/federated ML, and trustworthy information processing in large-scale wireless and distributed networks. 
 		</p>
  
 
@@ -99,7 +99,7 @@
 
 
 
-	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning has been accepted to <a href="https://arxiv.org/pdf/2106.03328.pdf">AAAI 2023</a>! </p>
+	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to AAAI 2023! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a UCR OASIS Funding Award to support our research. </p>
