--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>				
 					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
-					<li><a href="https://basakguler.github.io/outreach.html"style="color: MidnightBlue">Outreach</a></li>
 				</ul>
 
 			</div> <!-- secondaryNavigation -->		
@@ -82,7 +81,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on distributed/federated ML, and trustworthy information processing in large-scale wireless and distributed networks. 
+		<p style="text-align:justify">   My research is on information theory, distributed and federated  learning, security and privacy in large-scale wireless networks. 
 		</p>
  
 
@@ -91,15 +90,22 @@
 	
 		<p style="text-align:justify"> 
 		
-		<b>Prospective Students:</b> I am always interested in working with highly motivated students who want to pursue research at the intersection of: information theory, distributed/federated ML, privacy/security in wireless networks. Our research typically involves both  theoretical and implementation components, which requires a strong mathematical background. 
-		If you are interested in working in our lab, please apply to the PhD programs of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no prior experience in engineering are also encouraged to apply. 
+		<b>Prospective Students:</b> I am always interested in working with highly motivated students at the intersection of: information theory, distributed/federated learning, privacy and security. 
+		Please apply to the PhD programs of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. 
 		</p>
+		
+		
+  
+
+
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 
+	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> One paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS 2023</a>, congratulations Xingyu and Hasin! </p>
 
-	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to AAAI 2023! </p>
+
+	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to  <a href="https://aaai.org/Conferences/AAAI-23/" > AAAI 2023</a>! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a UCR OASIS Funding Award to support our research. </p>
@@ -190,14 +196,12 @@
   <p style="text-align:justify"><font color="purple"><b> April 2020: </b></font>   New paper on privacy-aware distributed machine learning: <a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>   </p>    
 
 		
-
-
-
 		<p style="font-size:large;"><font color="blue"><b>Contact:</b></font></p>
 
 
-		  <p>I can be reached at bguler at ece dot ucr dot edu </p>
-		  
+		  <p> I can be reached at bguler at ece dot ucr dot edu </p>
+		
+
 
 
 
