--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> One paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS 2023</a>, congratulations Xingyu and Hasin! </p>
+	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> New paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS 2023</a>, congratulations Xingyu and Hasin! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to  <a href="https://aaai.org/Conferences/AAAI-23/" > AAAI 2023</a>! </p>
