--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023, both strong accepts!</a> Congratulations to Hasin and Xingyu! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> March 2023: </b></font> Organizing a special session on federated learning and wireless edge intelligence at <a href="https://www.asilomarsscconf.org/"> Asilomar 2023!</a>   </p>
+
 
 	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> New paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS 2023</a>, congratulations Xingyu and Hasin! </p>
 
@@ -133,7 +138,7 @@
 	<p style="text-align:justify"><font color="purple"><b> Jan 2022: </b></font> Our paper Over-the Air Clustered Federated Learning has been accepted to International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2022). Congratulations Hasin! </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> Dec 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2112.12872"> privacy-preserving federated learning!</a> with Irem and Hasin. TLDR: We introduce a sparse communication framework for speeding up secure aggregation. Preliminary version to appear at 2022 ICLR Workshop on Socially Responsible Machine Learning. </p>
+	<p style="text-align:justify"><font color="purple"><b> Dec 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2112.12872"> privacy-preserving federated learning!</a> at ICLR 2022 ICLR Workshop on Socially Responsible Machine Learning. We introduce a sparse communication framework for speeding up secure aggregation.  </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Oct 2021: </b></font> New paper on <a href="https://arxiv.org/abs/2110.02177"> asynchronous federated learning</a>! Preliminary version to appear at <a href="https://nips.cc/Conferences/2021/Schedule?showEvent=21829"> NeurIPS Workshop on Federated Learning: New Challenges on Privacy, Fairness, Robustness, Personalization and Data Ownership</a>.</p>
