--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
-	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023, both strong accepts!</a> Congratulations to Hasin and Xingyu! </p>
+	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023</a>, both strong accepts! Congratulations to Hasin and Xingyu! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> March 2023: </b></font> Organizing a special session on federated learning and wireless edge intelligence at <a href="https://www.asilomarsscconf.org/"> Asilomar 2023!</a>   </p>
