--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		
 
 		
-		<p style="text-align:justify">   My research is on information theory, distributed and federated  learning, security and privacy in large-scale wireless networks. 
+		<p style="text-align:justify">   Our research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks (security, privacy, sustainability). 
 		</p>
  
 
@@ -90,8 +90,8 @@
 	
 		<p style="text-align:justify"> 
 		
-		<b>Prospective Students:</b> I am always interested in working with highly motivated students at the intersection of: information theory, distributed/federated learning, privacy and security. 
-		Please apply to the PhD programs of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. 
+		<b>Prospective Students:</b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> An engineering background is not required, a strong math background and willingness to learn is required. Please apply to the PhD program of the ECE Department and then send me an e-mail with the title "Prospective Student" along with your CV and research interests. 
+
 		</p>
 		
 		
@@ -100,6 +100,12 @@
 
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+	<p style="text-align:justify"><font color="purple"><b> May 2023: </b></font> Serving as a TPC member for INFOCOM 2024! </a> </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> May 2023: </b></font> <a href="https://cloud.google.com/edu/researchers/innovators"> Google Cloud Research Innovator!</a> </p>
+
 
 	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023</a>, both strong accepts! Congratulations to Hasin and Xingyu! </p>
 
