--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <link href="https://basakguler.github.io/styles/generic.css" rel="stylesheet" type="text/css" />
 <link href="https://basakguler.github.io/styles/electrical.css" rel="stylesheet" type="text/css" />
 
+
+  <style>
+    .figure-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .figure {
+      flex: 1;
+      text-align: center;
+    }
+    .figure img {
+      width: 200px; /* Adjust the width as needed */
+      height: auto;
+    }
+  </style>
+
 </head>
 
 
@@ -58,6 +75,7 @@
 					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>				
 					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/prospective.html"style="color: MidnightBlue">Prospective Students</a></li>
 				</ul>
 
 			</div> <!-- secondaryNavigation -->		
@@ -81,7 +99,7 @@
 		
 
 		
-		<p style="text-align:justify">   Our research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks (security, privacy, sustainability). 
+		<p style="text-align:justify">   Our research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks. We design massive-scale reliable networked information systems with strong information-theoretic guarantees for security, privacy, and sustainability. 
 		</p>
  
 
@@ -90,16 +108,32 @@
 	
 		<p style="text-align:justify"> 
 		
-		<b>Prospective Students:</b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> An engineering background is not required, a strong math background and willingness to learn is required. Please apply to the PhD program of the ECE Department and then send me an e-mail with the title "Prospective Student" along with your CV and research interests. 
+		<b>Prospective students</b> please follow <a href="https://basakguler.github.io/prospective.html"style="color: blue">this link</a>.  
+		
 
 		</p>
 		
 		
-  
+		<p style="text-align:justify"> 
+		
+		<b>Contact:</b> I can be reached at <font color="blue">bguler at ece dot ucr dot edu</font>  
+		
+
+		</p> 		
+		
+
 
 
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+		
+	<p style="text-align:justify"><font color="purple"><b> July 2023: </b></font> New collaborative funding award for <a href="https://mcusercontent.com/16b960a15758a2e9f6cc8140d/files/10cd5110-9bf7-972e-94e4-7655e311e16a/OASIS_IFA_2nd_Round_Large_and_Small_Awards_compressed.pdf"> AI Equity and Sustainability</a>! </p>
+
+	<p style="text-align:justify"><font color="purple"><b> June 2023: </b></font> Xingyu and Umit had their paper accepted to <a href="https://fl-icml2023.github.io/"> FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities</a>, congratulations! </p>
+
+
+		
 
 	<p style="text-align:justify"><font color="purple"><b> May 2023: </b></font> Serving as a TPC member for INFOCOM 2024! </a> </p>
 
@@ -119,7 +153,7 @@
 	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to  <a href="https://aaai.org/Conferences/AAAI-23/" > AAAI 2023</a>! </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a UCR OASIS Funding Award to support our research. </p>
+	<p style="text-align:justify"><font color="purple"><b> September 2022: </b></font> Our group has received a <a href="https://mcusercontent.com/16b960a15758a2e9f6cc8140d/files/04c37437-c972-a9ef-4778-0b9b2e500236/Internal_Funding_Awards_25k_.pdf?utm_source=UC+Riverside+Master+List&utm_campaign=25773cefba-EMAIL_CAMPAIGN_2022_04_04_06_29_COPY_01&utm_medium=email&utm_term=0_6a473f0f9b-25773cefba-88082301">UCR OASIS Funding Award</a> to support our research. </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> August 2022: </b></font> Serving as a track co-chair for ML and Optimization for Wireless Systems at <a href="https://wcnc2023.ieee-wcnc.org/">WCNC 2023</a>, submission deadline Sept 12, 2022! </p>
@@ -131,7 +165,8 @@
 	<p style="text-align:justify"><font color="purple"><b> July 2022: </b></font> Serving as a panelist  at the <a href="https://nasit-2022.seas.ucla.edu/">North American School of Information Theory</a>. </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> June 2022: </b></font> Organizing an AI workshop for high school students at UC Riverside in July 2022, in collaboration with the Redlands Unified School District. </p>
+	<p style="text-align:justify"><font color="purple"><b> June 2022: </b></font> Organizing an AI workshop for high school students at UC Riverside in July 2022, in 
+	tion with the Redlands Unified School District. </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Apr 2022: </b></font> Seminar at UCLA. </p>
@@ -207,18 +242,31 @@
   <p style="text-align:justify"><font color="purple"><b> April 2020: </b></font>   New paper on privacy-aware distributed machine learning: <a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>   </p>    
 
 		
-		<p style="font-size:large;"><font color="blue"><b>Contact:</b></font></p>
 
 
-		  <p> I can be reached at bguler at ece dot ucr dot edu </p>
-		
+		<p style="font-size:large;"><font color="blue"><b>Support:</b></font></p> 
+  
 
-
-
-
+<p style="text-align:justify"> Our research is supported by a diverse range of funding awards. We acknowledge all our past and current sponsors.  </p> 
 
 
 
+  <div class="figure-container">
+    <div class="figure">
+      <img src="images/NSF.jpg" alt="Figure 1">
+    </div>
+    <div class="figure">
+      <img src="images/DEVCOM_ARL_LOGO.png" alt="Figure 2">
+    </div>
+    <div class="figure">
+      <img src="images/GoogleResearch_254x36px.png" alt="Figure 3">
+    </div>
+    <div class="figure">
+      <img src="images/UCR-logo.png" alt="Figure 4">
+    </div>
+  </div>
+  
+    
 
 		</div>		
 
