--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,8 @@
 					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>				
 					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/prospective.html"style="color: MidnightBlue">Prospective Students</a></li>
+
 				</ul>
 			</div> <!-- secondaryNavigation -->		
 	</div> <!-- firstColumn -->
@@ -135,8 +137,21 @@ For a full list of publications please see my <a href="https://scholar.google.co
   <h1>Conference Publications</h1>
           <ol>
 
+   <li> Umit Yigit Basaran, Xingyu Lu, Basak Guler, Beyond Secure Aggregation: Scalable Multi-Round Secure Collaborative Learning, FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities, in conjunction with ICML'2023. </li>       
+  <br />
 
-   <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, AAAI 2023. </li>       
+   <li> Xingyu Lu, Basak Guler, Breaking the Quadratic Communication Overhead of Secure Multi-Party Neural Network Training, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
+  <br />
+  
+   <li> Hasin Us Sami, Basak Guler, Secure Aggregation for Clustered Federated Learning, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
+  <br />
+    
+
+
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, Dropout-Resilient Secure Multi-Party Collaborative Learning with Linear Communication Complexity, AISTATS International Conference on Artificial Intelligence and Statistics, AISTATS'2023. </li>       
+  <br />
+
+   <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, AAAI Conference on Artificial Intelligence, AAAI 2023. </li>       
   <br />
 
    <li> Irem Ergun, Hasin Us Sami, Basak Guler, Communication-Efficient Secure Aggregation for Federated Learning, IEEE Global Communications Conference, Globecom'22, Rio de Janeiro, Brazil, Dec. 2022. </li>       
