--- a/teaching.html
+++ b/teaching.html
@@ -58,6 +58,8 @@
 					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>				
 					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/prospective.html"style="color: MidnightBlue">Prospective Students</a></li>
+
 
 				</ul>
 			</div> <!-- secondaryNavigation -->		
