--- a/prospective.html
+++ b/prospective.html
@@ -71,43 +71,48 @@
 
 
 		<div id="copy" style="padding:20px; width:630px"> 
+
+<h1><b> Prospective Students: </b></h1>
+<br />		
+
+
+		<p style="text-align:justify"><font color="black"> </font> <b> PhD Students: </b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> Our research is at the intersection of information theory, distributed computing, and security/privacy, which requires a strong math background. If your research interests are aligned with our group and you would like to work with us, please apply to the PhD program of the ECE Department and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no engineering background are also welcome to apply.   </p>
 		
+
 		
+<p style="text-align:justify"><font color="black"> </font> <b> MSc Students: </b> We do not have funded MSc positions at the moment. </p>
+		
+	    	
+
+
+		
+<!-- 
 		<br>
 
-		<h1> <b> PhD Students: </b> </h1>
-		<br />	
+		<p style="font-size:large;text-align:justify;margin-bottom:1cm"><font color="black"><b> Graduate Courses: </b></font> </p>
 		
-		<p style="text-align:justify;margin-bottom:0.2cm"> Hasin Us Sami (2020 - present) </p>
-
-	
-
-	    <p  </p>
-	    &nbsp
-
-		<p style="text-align:justify;margin-bottom:0.2cm"> Yushu Yan  (2021 - present) </p>
-		
-		
-	    <p  </p>
-	    &nbsp
-
 
 		
-		<p style="text-align:justify;margin-bottom:0.2cm"> Xingyu Lu (2022 - present)  </p>
+		<p style="font-size:large;text-align:justify;margin-bottom:1cm"><font color="black">Winter 2021, 2022:  </font> Information Theory (EE 250)</p>
 		
-			
 
-	    <p  </p>
-	    &nbsp
+		
 
-		<p style="text-align:justify;margin-bottom:0.2cm"> Umit Yigit Basaran (2022 - present)   </p>
+		
+		<p style="font-size:large;text-align:justify;margin-bottom:1.5cm"><font color="black"> Fall 2020, 2021:  </font> Stochastic Processes (EE 215)</p>
 		
 
 	    
+		<p style="font-size:large;text-align:justify;margin-bottom:1cm"><font color="black"><b> Undergraduate Courses:  </b></font> </p>
+		
 
+	
+		<p style="font-size:large;text-align:justify;margin-bottom:1cm"><font color="black"> Spring 2022:  </font> Digital Signal Processing (EE 141)</p>
+		
+ -->
 
-
-
+		
+		
 
 
 		</div> <!-- copy -->
