--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 
 
 
+  <style>
+    .figure-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .figure {
+      flex: 1;
+      text-align: center;
+    }
+    .figure img {
+      width: 200px; /* Adjust the width as needed */
+      height: auto;
+    }
+  </style>
+
+
+
 </head>
 
 
@@ -82,6 +100,7 @@
 
 		</p> 
 		
+
 		
 
 		
@@ -227,8 +246,30 @@
 
   <p style="text-align:justify"><font color="purple"><b> April 2020: </b></font>   New paper on privacy-aware distributed machine learning: <a href="https://arxiv.org/pdf/1902.00641.pdf">CodedPrivateML: A Fast and Privacy-Preserving Framework for Distributed Machine Learning</a>   </p>    
 
+
+<p style="font-size:large;"><font color="blue"><b>Support:</b></font></p> 
+  
 		
 
+<p style="text-align:justify"> Our research is supported by a diverse range of projects. We acknowledge all our past and current sponsors.  </p> 
+
+
+
+  <div class="figure-container">
+    <div class="figure">
+      <img src="images/NSF.jpg" alt="Figure 1">
+    </div>
+    <div class="figure">
+      <img src="images/DEVCOM_ARL_LOGO.png" alt="Figure 2">
+    </div>
+    <div class="figure">
+      <img src="images/GoogleResearch_254x36px.png" alt="Figure 3">
+    </div>
+    <div class="figure">
+      <img src="images/UCR-logo.png" alt="Figure 4">
+    </div>
+  </div>
+  
 
 
   
