--- a/index.html
+++ b/index.html
@@ -132,10 +132,24 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Sep 2023: </b></font> Xingyu and Hasin had  their paper accepted to IEEE Transactions on Communications, congratulations! </p>
+
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Aug 2023: </b></font> Yushu had  his first paper accepted to the Asilomar Conference! </p>
+
+
+
+
 		
 	<p style="text-align:justify"><font color="purple"><b> July 2023: </b></font> New collaborative funding award for <a href="https://mcusercontent.com/16b960a15758a2e9f6cc8140d/files/10cd5110-9bf7-972e-94e4-7655e311e16a/OASIS_IFA_2nd_Round_Large_and_Small_Awards_compressed.pdf"> AI Equity and Sustainability</a>! </p>
 
-	<p style="text-align:justify"><font color="purple"><b> June 2023: </b></font> Xingyu and Umit had their paper accepted to <a href="https://fl-icml2023.github.io/"> FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities</a>, congratulations! </p>
+	<p style="text-align:justify"><font color="purple"><b> June 2023: </b></font> Xingyu and Umit presented their paper at <a href="https://fl-icml2023.github.io/"> FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities</a>, congratulations! </p>
 
 
 		
