--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,9 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <ol>
 
 
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, SCALR: Communication-Efficient Secure Multi-Party Logistic Regression, IEEE Transactions on Communications, Aug. 2023. </li>       
+  <br />
+
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, Jan. 2021. </li>       
   <br />
   
@@ -136,6 +139,11 @@ For a full list of publications please see my <a href="https://scholar.google.co
                      
   <h1>Conference Publications</h1>
           <ol>
+
+
+   <li> Yushu Yan, Xiangu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurty, Ananthram Swami, Federated Learning for Massive MIMO Power Allocation, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
+  <br />
+
 
    <li> Umit Yigit Basaran, Xingyu Lu, Basak Guler, Beyond Secure Aggregation: Scalable Multi-Round Secure Collaborative Learning, FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities, in conjunction with ICML'2023. </li>       
   <br />
