--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
 
+	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Xingyu and Hasin had their paper accepted to IEEE Transactions on Information Theory, congratulations! </p>
 
+
+	<p style="text-align:justify"><font color="purple"><b> Nov 2023: </b></font> Hasin has passed his qualifying exam, congratulations! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Sep 2023: </b></font> Xingyu and Hasin had  their paper accepted to IEEE Transactions on Communications, congratulations! </p>
