--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 
 	<p style="text-align:justify"><font color="purple"><b> June 2022: </b></font> Organizing an AI workshop for high school students at UC Riverside in July 2022, in 
-	tion with the Redlands Unified School District. </p>
+	collaboration with the Redlands Unified School District. </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Apr 2022: </b></font> Seminar at UCLA. </p>
