--- a/prospective.html
+++ b/prospective.html
@@ -76,11 +76,9 @@
 <br />		
 
 
-		<p style="text-align:justify"><font color="black"> </font> <b> PhD Students: </b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> Our research is at the intersection of information theory, distributed computing, and security/privacy, which requires a strong math background. If your research interests are aligned with our group and you would like to work with us, please apply to the PhD program of the ECE Department and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no engineering background are also welcome to apply.   </p>
+		<p style="text-align:justify"><font color="black"> </font> <b> PhD Students: </b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> Our research is at the intersection of information theory, distributed computing, and security/privacy, which requires a strong math background. If your research interests are aligned with our group and you would like to work with us, please apply to the PhD program of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no engineering background are also welcome to apply.   </p>
 		
 
-		
-<p style="text-align:justify"><font color="black"> </font> <b> MSc Students: </b> We do not have funded MSc positions at the moment. </p>
 		
 	    	
 
