--- a/publications.html
+++ b/publications.html
@@ -98,6 +98,8 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <h1>Journal Publications</h1>
  <ol>
 
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, Privacy-preserving Collaborative Learning with Linear Communication Complexity, IEEE Transactions on Information Theory, Dec. 2023. </li>       
+  <br />
 
    <li> Xingyu Lu, Hasin Us Sami, Basak Guler, SCALR: Communication-Efficient Secure Multi-Party Logistic Regression, IEEE Transactions on Communications, Aug. 2023. </li>       
   <br />
