--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Hasin had his paper accepted to IEEE Transactions on Wireless Communications, congratulations! </p>
+
+
 
 	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Xingyu and Hasin had their paper accepted to IEEE Transactions on Information Theory, congratulations! </p>
 
