--- a/publications.html
+++ b/publications.html
@@ -98,8 +98,13 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <h1>Journal Publications</h1>
  <ol>
 
+
    <li> Xingyu Lu, Hasin Us Sami, Basak Guler, Privacy-preserving Collaborative Learning with Linear Communication Complexity, IEEE Transactions on Information Theory, Dec. 2023. </li>       
   <br />
+  
+    <li> Hasin Us Sami, Basak Guler, Over-the-air Clustered Federated Learning, IEEE Transactions on Wireless Communications, Dec. 2023. </li>       
+  <br />
+ 
 
    <li> Xingyu Lu, Hasin Us Sami, Basak Guler, SCALR: Communication-Efficient Secure Multi-Party Logistic Regression, IEEE Transactions on Communications, Aug. 2023. </li>       
   <br />
@@ -143,7 +148,7 @@ For a full list of publications please see my <a href="https://scholar.google.co
           <ol>
 
 
-   <li> Yushu Yan, Xiangu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurty, Ananthram Swami, Federated Learning for Massive MIMO Power Allocation, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
+   <li> Yushu Yan, Xiangyu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Federated Learning for Massive MIMO Power Allocation, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
   <br />
 
 
